2009-05-04  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #464053 (bnc)

	GAL Delta fetching support added.
	* addressbook/e-book-backend-gal.c (get_contact_list),
	(build_query), (get_time_stamp), (last_mod_time_populate),
	(start_book_view), (dosearch), (generate_cache), (update_cache),
	(authenticate_user), (set_mode), (init): Only the changes would be 
	fetched from now instead of downloading the whole GAL to fetch changes

2009-04-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #553932

	* calendar/e-cal-backend-exchange.c: (set_mode):
	Do not notify about readonly state here, we are not asked for that.

2009-04-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #577105

	* calendar/e-cal-backend-exchange.c: (save_object),
	(e_cal_backend_exchange_modify_object),	(get_object),
	(free_exchange_comp): Prevent using NULL in libical functions.

2009-04-24  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #563954

	* camel/camel-exchange-folder.c: (cmp_uids), (class_init):
	Define its own compare function for UIDs.

2009-03-16  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.26.0 release and version bump

2009-03-06  Tobias Mueller  <tobiasmue@gnome.org>

	* mail/Makefile.am:
	* addressbook/Makefile.am:
	* storage/Makefile.am:
	* calendar/Makefile.am:
	Changed order of the libs to link against to not pull system libs

	** Fixes bug #572950 (Patch by Daniel Macks)

2009-03-04  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #567852

	* calendar/e-cal-backend-exchange-tasks.c: (create_task_object):
	* calendar/e-cal-backend-exchange-calendar.c: (create_object): Don't
	add new CREATED, LAST-MODIFIED properties when event has one already.

2009-03-02  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Post-release version bump.

2009-03-02  Milan Crha  <mcrha@redhat.com>

	* storage/exchange-config-listener.c: (update_foreign_uri):
	Runtime warning fix.

2009-03-02  Matthew Barnes  <mbarnes@redhat.com>
