@@ -1,3 +1,10 @@
+2009-06-19  Jedy Wang <jedy.wang@sun.com>
+
+	** Fix for bug #586209
+
+	* addressbook/e-book-backend-gal.c: Do not return value for a void
+	function.
+
 2009-05-04  Srinivasa Ragavan  <sragavan@novell.com>
 
 	** Fix for bug #464053 (bnc)
